Improved comments and importer name

--- a/config/cdi_generator_config.properties
+++ b/config/cdi_generator_config.properties
@@ -3,5 +3,7 @@
 # and the value is the importer class.
 # If the importer class is in the no.bcdc.cdigenerator.importers
 # package, the package does not need to be specified
+#
+# Spaces in importer names have to be escaped
 
-importer.SOCAT\ PANGAEA=SocatPangaea
+importer.SOCAT\ from\ PANGAEA=SocatPangaea
