--- a/config/cdi_generator_config.properties
+++ b/config/cdi_generator_config.properties
@@ -7,3 +7,4 @@
 # Spaces in importer names have to be escaped
 
 importer.SOCAT\ from\ PANGAEA=SocatPangaea
+config.tempDir=/home/stevej/Documents/SeaDataNet/CDI_Generator_temp
