Updated config file

--- a/config/cdi_generator_config.properties
+++ b/config/cdi_generator_config.properties
@@ -1,10 +1,7 @@
-# Importers are defined with the name
-# importer.<name>
-# and the value is the importer class.
+# Importers are defined by the name of their class, separated by a semicolon
 # If the importer class is in the no.bcdc.cdigenerator.importers
 # package, the package does not need to be specified
-#
-# Spaces in importer names have to be escaped
 
-importer.SOCAT\ from\ PANGAEA=SocatPangaea
-config.tempDir=/home/stevej/Documents/SeaDataNet/CDI_Generator_temp
+importers=SocatPangaea
+config.tempDir=CDI_Generator_temp
+config.modelsDir=NEMO_models
