NEMO template population

--- a/config/cdi_generator_config.properties
+++ b/config/cdi_generator_config.properties
@@ -2,6 +2,6 @@
 # If the importer class is in the no.bcdc.cdigenerator.importers
 # package, the package does not need to be specified
 
-importers=SocatPangaea
+importers=SocatV3Pangaea
 config.tempDir=CDI_Generator_temp
 config.nemoTemplatesDir=NEMO_templates
