We can run NEMO

--- a/config/cdi_generator_config.properties
+++ b/config/cdi_generator_config.properties
@@ -3,5 +3,9 @@
 # package, the package does not need to be specified
 
 importers=SocatV3Pangaea
-config.tempDir=CDI_Generator_temp
-config.nemoTemplatesDir=NEMO_templates
+config.tempDir=/Users/zuj007/Documents/SeaDataNet/CDI_Generator_temp
+config.nemoTemplatesDir=/Users/zuj007/Documents/SeaDataNet/Repository/CDI_Generator/NEMO_templates
+config.nemoOutputDir=/Users/zuj007/Documents/SeaDataNet/CDI_Generator_nemo
+config.nemoWorkingDir=/Users/zuj007/Documents/SeaDataNet/software/NEMO
+config.networkRetries=10
+config.retryWaitTime=5
