Check database connection on startup

--- a/config/cdi_generator_config.properties
+++ b/config/cdi_generator_config.properties
@@ -9,3 +9,7 @@ dir.nemoOutput=/Users/zuj007/Documents/SeaDataNet/CDI_Generator_nemo
 dir.nemoWorking=/Users/zuj007/Documents/SeaDataNet/software/NEMO
 network.retryCount=10
 network.retryWaitTime=5
+db.server=192.168.56.101
+db.port=3306
+db.user=seadatanet
+db.password=seadatanet
