Added database name

--- a/config/cdi_generator_config.properties
+++ b/config/cdi_generator_config.properties
@@ -11,5 +11,6 @@ network.retryCount=10
 network.retryWaitTime=5
 db.server=192.168.56.101
 db.port=3306
+db.database=seadatanet
 db.user=seadatanet
 db.password=seadatanet
