--- a/config/cdi_generator_config.properties
+++ b/config/cdi_generator_config.properties
@@ -1,5 +1,5 @@
 # Importers are defined by the name of their class, separated by a semicolon
-# If the importer class is in the no.bcdc.cdigenerator.importers
+# If the importer class is in the no.bcdc.cdigenerator.importers.concrete
 # package, the package does not need to be specified
 
 importers=SocatV3Pangaea
@@ -14,3 +14,8 @@ db.port=3306
 db.database=seadatanet
 db.user=seadatanet
 db.password=seadatanet
+mikado.libraryDir=/Users/zuj007/Documents/SeaDataNet/software/mikado_V3.3.4/dist/lib
+mikado.jarFile=/Users/zuj007/Documents/SeaDataNet/software/mikado_V3.3.4/dist/mikado.jar
+mikado.homeDir=/Users/zuj007/Documents/SeaDataNet/software/mikado_V3.3.4
+mikado.templateFile=/Users/zuj007/Documents/SeaDataNet/Repository/CDI_Generator/MIKADO_templates/mikado.xml
+mikado.outputDir=/Users/zuj007/Documents/SeaDataNet/CDI_Generator_mikado
